# comm_handler

./: Cargo.toml  flake.nix
examples/: bt_test.rs  framed_send.rs  ping_pong.rs  simple_send.rs  tcp_echo.rs
src/: communication.rs  error.rs  framed_handler.rs  handler.rs  lib.rs  packet_parser.rs
src/adapters/: bluetooth.rs  mod.rs  tcp.rs  uart.rs
src/traits/: communication.rs  configuration.rs  mod.rs  packet_parser.rs
