[package]
name = "comm_handler"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11.3", optional = true }
env_logger = "0.11.3"
flume = "0.11.0"
futures = "0.3.29"
log = "0.4.20"
serial2 = { version = "0.2.8", optional = true }
snafu = "0.8.2"
tokio = { version = "1.34.0", features = ["full"], optional = true }
uuid = { version = "1.6.0", optional = true }

[features]
default = ["uart", "bluetooth"]
uart = ["dep:serial2"]
bluetooth = ["dep:btleplug", "dep:tokio", "dep:uuid"]
