[package]
name = "comm_handler"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
flume = "0.11.0"
log = "0.4.20"
serial2 = { version = "0.2.8", optional = true }
snafu = "0.8.2"

[features]
default = ["uart"]
uart = ["dep:serial2"]
